# llm_practice

./: Chat-Completions.py  pyproject.toml
RAG/: Data_RAG.ipynb
