[project]
name = "transformers-ml-intro"
version = "0.1.0"
description = ""
authors = [
    {name = "Alexandr Semenets",email = "alexandrsemenec01@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "notebook (>=7.4.3,<8.0.0)",
    "openai (>=1.90.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
